[UPDATE] my_new_module : ajout menu root

--- a/my_new_module/views/views.xml
+++ b/my_new_module/views/views.xml
@@ -41,9 +41,7 @@
     -->
 
     <!-- Top menu item -->
-    <!--
-    <menuitem name="theme_backend" id="theme_backend.menu_root"/>
-    -->
+    <menuitem name="My New Module" id="my_new_module.root_menuitem"/>
     <!-- menu categories -->
     <!--
     <menuitem name="Menu 1" id="theme_backend.menu_1" parent="theme_backend.menu_root"/>
